# image_gallery

./: .gitignore  Makefile  README.md
.github/workflows/: rust-ubuntu.yml  rust-windows.yaml
app/: Cargo.toml
app/src/: main.rs
libs/cli/src/: lib.rs
libs/image_utils/: Cargo.toml
libs/image_utils/src/: lib.rs
libs/image_utils_wasm/: Cargo.toml
libs/image_utils_wasm/src/: lib.rs
libs/image_utils_wasm_native/: Cargo.toml
libs/image_utils_wasm_native/src/: lib.rs
libs/wasm_runner/: Cargo.toml
libs/wasm_runner/src/: lib.rs
web/: Makefile  package-lock.json  package.json
web/public/: index.css  index.html
web/src/: index.css  index.js
webserver/: Cargo.toml  Makefile
webserver/src/: main.rs
win-app/: Program.cs  win-app.csproj
