[package]
name = "image_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.6", features = ["jpeg", "png"]}

[features]
web_fs = []
native_fs = []

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
