[package]
name = "image_utils_wasm_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
